@@ -1,5 +1,6 @@
 20/02/2025:
-	- Re-ordered initializer lists in Watermark class constructor
+	- Re-ordered initializer lists in Watermark class constructor.
+	- Minor tweak to ICC embedding code to improve logging output.
 
 
 19/02/2025:
